@@ -20,6 +20,7 @@ gcc-9 (9-20181218-1) UNRELEASED; urgency=medium
   * Disable broken selective scheduling on ia64 (Adrian Glaubitz).
     See PR rtl-optimization/85412. Addresses: #916591.
   * Fix perl shebang for the gnathtml binary.
+  * Lower priority of libgcc[124] and libstdc++6 packages.
 
   [ Nicolas Boulenguez ]
   * Update Ada patches.
